Closed Bug 682210 Opened 13 years ago Closed 13 years ago

IonMonkey: infinite loop when using greedy

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: h4writer, Assigned: dvander)

References

Details

Attachments

(1 file)

infinite loop on the following code when using greedy:

function test() {
    for (var x = 1; x < 1; x++) {
        for (var y=1; y < 1; y++) {
        }
    }
}
Attached patch fixSplinter Review
Whoops - for some reason some local state was being saved in a shared data structure, and not cleared, so the same IR node was getting inserted into two blocks which makes inline lists incoherent.
Assignee: general → dvander
Status: NEW → ASSIGNED
Attachment #555971 - Flags: review?(cdleary)
Attachment #555971 - Flags: review?(cdleary) → review+
http://hg.mozilla.org/projects/ionmonkey/rev/8939f6d48a22
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: