Fix infinite loop after greedy register allocation (bug 682210, r=cdleary).